# NeuralNetwork

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  main.cpp
Components/ActivationFunctions/: LeakyReLU.h  ReLU.h  Sigmoid.h
Components/CostFunctions/: CostFunction.h  CrossEntropy.h  MSE.h
Components/Optimizers/: ADAM.h  Optimizer.h  SGD.h
Dataset/: Dataset.cpp  Dataset.h
Network/: Network.cpp  Network.h  NetworkBuilder.cpp  NetworkBuilder.h
NetworkLayers/ActivationLayer/: ActivationLayer.h  ActivationLayerTrain.h
NetworkLayers/BaseLayer/: Layer.h  OutputLayer.h  Trainable.h
NetworkLayers/Conv2DLayer/: Conv2DLayer.cpp  Conv2DLayer.h  Conv2DLayerTrain.cpp  Conv2DLayerTrain.h
NetworkLayers/DenseLayer/: DenseLayer.cpp  DenseLayer.h  DenseLayerTrain.cpp  DenseLayerTrain.h
NetworkLayers/Maxpool2DLayer/: MaxPool2DLayer.cpp  MaxPool2DLayer.h
NetworkLayers/SoftMaxLayer/: SoftMaxLayer.h  SoftMaxLayerTrain.h
VecAl/: CMakeLists.txt
VecAl/Gtests/: MatMulTest.cpp  MatrixMoveTest.cpp  VectorBasicTest.cpp
VecAl/MatOps/: AVX256float.h  AVX512float.h  Scalarfloat.h
VecAl/MatrixArrayTypes/: MatrixArray.h  MatrixArrayLike.cpp  MatrixArrayLike.h  MatrixArrayView.h
VecAl/MatrixTypes/: Matrix.cpp  Matrix.h  MatrixLike.cpp  MatrixLike.h  MatrixView.h
VecAl/VectorTypes/: Vector.cpp  Vector.h  VectorLike.cpp  VectorLike.h  VectorView.h
data/: fashion_mnist_train_labels.csv
